doc:swagger entry for  auth/reset-password request and /password
